--- a/DotNetLecture/DotNetLecture/DotNetLecture.csproj
+++ b/DotNetLecture/DotNetLecture/DotNetLecture.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JObject" Version="1.0.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
   </ItemGroup>
 
